# APP

./: CMakeLists.txt  Makefile  README.md  plotResolution.py  runReco.py
include/: ExampleContent.h
include/ExampleAlgorithmTools/: ExampleAlgorithmTool.h
include/ExampleAlgorithms/: AccessListsAlgorithm.h  CreateAdditionalCaloHitsAlgorithm.h  CreateClustersAlgorithm.h  CreateClustersDaughterAlgorithm.h  CreatePfosAlgorithm.h  CreateVerticesAlgorithm.h  DeleteClustersAlgorithm.h  DisplayListsAlgorithm.h  FragmentClustersAlgorithm.h  MergeClustersAlgorithm.h  PrepareCaloHitsAlgorithm.h  ReconfigureClustersAlgorithm.h  SelectHitSubsetAlgorithm.h  UseAlgorithmToolAlgorithm.h  UsePluginsAlgorithm.h  WriteTreeAlgorithm.h
include/ExampleHelpers/: ExampleHelper.h
include/ExampleObjects/: ExampleCaloHit.h
include/ExamplePlugins/: ExampleEnergyCorrectionPlugin.h  ExampleParticleIdPlugin.h  ExamplePseudoLayerPlugin.h
script/: ana.C  anaPi0Nass.C  pi0Mass.C
settings/: ExamplePandoraSettings.xml  test.xml
src/: read.C
src/ExampleAlgorithmTools/: ExampleAlgorithmTool.cc
src/ExampleAlgorithms/: AccessListsAlgorithm.cc  CreateAdditionalCaloHitsAlgorithm.cc  CreateClustersAlgorithm.cc  CreateClustersDaughterAlgorithm.cc  CreatePfosAlgorithm.cc  CreateVerticesAlgorithm.cc  DeleteClustersAlgorithm.cc  DisplayListsAlgorithm.cc  FragmentClustersAlgorithm.cc  MergeClustersAlgorithm.cc  PrepareCaloHitsAlgorithm.cc  ReconfigureClustersAlgorithm.cc  SelectHitSubsetAlgorithm.cc  UseAlgorithmToolAlgorithm.cc  UsePluginsAlgorithm.cc  WriteTreeAlgorithm.cc
src/ExampleHelpers/: ExampleHelper.cc
src/ExamplePlugins/: ExampleEnergyCorrectionPlugin.cc  ExampleParticleIdPlugin.cc  ExamplePseudoLayerPlugin.cc
test/: runRec.cc
